fix number page on mobile chromium browsers being bugged out

--- a/css/index.css
+++ b/css/index.css
@@ -529,3 +529,7 @@ h3 {
 .gsc-refinementBlock {
     --border-color: #FFF;
 }
+
+.gsc-cursor-numbered-page {
+    color: var(--text-color) !important;
+}
